--- a/index.html
+++ b/index.html
@@ -4,16 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/styles.css">
     <title>HW11-Promosification</title>
 </head>
 <body>
     <div class="img-thumb">
-        <img src="./images/99px_ru_wallpaper_207435_bolshaja_luna_nad_okeanom.jpg" alt="moon" >
+        <img src="./images/tired.jpg" alt="tired" >
     </div>
     
-    <!-- <script src='./src/js/task-1.js' type="module"></script> -->
-    <!-- <script src='./src/js/task-2.js' type="module"></script> -->
-    <script src='./src/js/task-3.js' type="module"></script>
+   <script src="./index.js" type="module"></script>
 </body>
 </html>
